--- a/scan_parameters_med_dmsms.ini
+++ b/scan_parameters_med_dmsms.ini
@@ -9,7 +9,7 @@ runDelphes = False
 
 # zpMasses = $loop{[500.0, 600.0, 700.0, 800.0, 900.0, 1000.0, 1100.0, 1200.0, 1300.0, 1400.0, 1500.0, 1600.0, 1700.0, 1800.0, 1900.0, 2000.0]}
 
-y0Masses = $loop{[140.0, 150.0, 200.0, 300.0, 400.0, 500.0, 600.0, 700.0, 800.0, 900.0, 1000.0, 1100.0, 1200.0, 1300.0, 1400.0, 1500.0, 1600.0, 1700.0, 1800.0, 2000.0]}
+y0Masses = $loop{[140.0, 150.0, 200.0, 350.0, 400.0, 500.0, 600.0, 700.0, 800.0, 900.0, 1000.0, 1100.0, 1200.0, 1300.0, 1400.0, 1500.0, 1600.0, 1700.0, 1800.0, 2000.0]}
 
 
 thetas = $loop{[0.1, 0.2]}
@@ -26,9 +26,9 @@ paramcard = Cards/y0_prod/param_card.dat # Path to the default parameter_card.da
 runcard = Cards/y0_prod/run_card.dat # Path to the default run_card.dat to be used by MadGraph. Note that the parameter values defined in the MadGraphSet section below will automatically overwrite the values in runcard. If not defined, the default file for the model will be used.
 # delphescard = Cards/delphes_card_trimmed.dat # If not defined, will not run Delphes
 # pythia8card = Cards/pythia8_card_match.dat # If not defined it will not run Pythia and Delphes
-processFolder = 2mdm_y0_prod # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
+processFolder = 2mdm_y0_prod_nojet # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
 [MadGraphSet]
-nevents = 15000
+nevents = 10000
 mxd = 65.0
 my0 = ${AuxPars:y0Masses}
 gsu33 = ${AuxPars:thetas}
