--- a/scan_parameters_h_dmdm.ini
+++ b/scan_parameters_h_dmdm.ini
@@ -29,10 +29,11 @@ runcard = Cards/h_prod/run_card.dat
 # delphescard = Cards/delphes_card_trimmed.dat # If not defined, will not run Delphes
 # pythia8card = Cards/pythia8_card_match.dat # If not defined it will not run Pythia and Delphes
 #processFolder = 2mdm_zp_prod # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
-processFolder = 2mdm_h_prod
+processFolder = 2mdm_hxxj_prod
 [MadGraphSet]
 nevents = 10000
 mchi = 65.0
+wh = auto 
 msd = ${AuxPars:sdMasses}
 #msd = 200.0
 mzp = 2000.0
