--- a/scan_parameters_spin1.ini
+++ b/scan_parameters_spin1.ini
@@ -1,21 +1,21 @@
 [options]
 cleanOutput = True
 runMadGraph = True
-runPythia = False
-runDelphes = False
+runPythia = True
+runDelphes = True
 # ncpu = 1 # info not used right now
 # ncore = 7 # info not used right now
 [AuxPars]
 
-zpMasses = $loop{[2100.0, 2200.0, 2300.0, 2400.0, 2500.0]}
+#zpMasses = $loop{[2100.0, 2200.0, 2300.0, 2400.0, 2500.0]}
 
 #sdMasses = $loop{[200.0, 300.0, 400.0, 500.0, 600.0, 700.0, 800.0, 900.0, 1000.0, 1100.0, 1200.0, 1300.0, 1400.0, 1500.0]}
 
 #thetas = $loop{[0.1, 0.2, 0.25]}
 
-gqs = $loop{[0.1, 0.2, 0.25, 0.3]}
+#gqs = $loop{[0.1, 0.2, 0.25, 0.3]}
 
-gchis = $loop{[1.0, 2.0, 3.0]}
+#gchis = $loop{[1.0, 2.0, 3.0]}
 
 [MadGraphPars]
 #MG5 Cards:
@@ -25,20 +25,20 @@ paramcard = Cards/2mdm_spin1/param_card.dat # Path to the default parameter_card
 #paramcard = Cards/sd_prod/param_card.dat
 runcard = Cards/2mdm_spin1/run_card.dat # Path to the default run_card.dat to be used by MadGraph. Note that the parameter values defined in the MadGraphSet section below will automatically overwrite the values in runcard. If not defined, the default file for the model will be used.
 #runcard = Cards/sd_prod/run_card.dat
-# delphescard = Cards/delphes_card_trimmed.dat # If not defined, will not run Delphes
-# pythia8card = Cards/pythia8_card_match.dat # If not defined it will not run Pythia and Delphes
-processFolder = 2mdm_spin1 # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
+delphescard = Cards/delphes_card.dat # If not defined, will not run Delphes
+pythia8card = Cards/pythia8_card.dat # If not defined it will not run Pythia and Delphes
+processFolder = Tests/spin1 # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
 #processFolder = 2mdm_sd_prod
 [MadGraphSet]
 nevents = 50000
 mchi = 65.0
 #msd = ${AuxPars:sdMasses}
 msd = 200.0
-#mzp = 2000.0
-mzp = ${AuxPars:zpMasses}
+mzp = 2000.0
+#mzp = ${AuxPars:zpMasses}
 sa = 0.2
-gqv = ${AuxPars:gqs}
-gchi = ${AuxPars:gchis}
+gqv = 0.25
+gchi = 2.0
 ychi = 1.0
 se = 0.0
 gqa = 0.0
