--- a/scan_parameters_2mdm.ini
+++ b/scan_parameters_2mdm.ini
@@ -7,11 +7,11 @@ runDelphes = True
 # ncore = 7 # info not used right now
 [AuxPars]
 
-#zpMasses = $loop{[2100.0, 2200.0, 2300.0, 2400.0, 2500.0]}
-#sdMasses = $loop{[300.0, 400.0, 500.0, 600.0, 700.0, 800.0, 900.0]}
-sdMasses = $loop{[400.0, 500.0, 600.0, 700.0, 800.0, 900.0, 1000.0]}
+#zpMasses = $loop{[2000.0, 2100.0, 2200.0, 2300.0, 2400.0, 2500.0]}
+sdMasses = $loop{[200.0, 300.0, 400.0, 500.0, 600.0, 700.0, 800.0, 900.0]}
+#sdMasses = $loop{[400.0]}
 
-thetas = $loop{[0.2, 0.25]}
+#thetas = $loop{[0.2, 0.25]}
 
 #gqs = $loop{[0.1, 0.2, 0.25, 0.3]}
 
@@ -27,21 +27,21 @@ paramcard = Cards/2mdm_spin0/param_card.dat
 runcard = Cards/2mdm_spin0/run_card_bias.dat
 delphescard = Cards/delphes_card_trimmed.dat # If not defined, will not run Delphes
 pythia8card = Cards/pythia8_card.dat # If not defined it will not run Pythia and Delphes
-@processFolder = Tests/2mdm_spin1 # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
-processFolder = Tests/2mdm_spin0
+#processFolder = Tests/2mdm_spin1 # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
+processFolder = 2mdm_spin0/
 [MadGraphSet]
-nevents = 10000
-mchi = 150.0
+nevents = 75000
+mchi = 65.0
 msd = ${AuxPars:sdMasses}
-#msd = 200.0
+#msd = 400.0
 mzp = 2000.0
 #mzp = ${AuxPars:zpMasses}
-sa = ${AuxPars:thetas}
-gqv = 0.25
+sa = 0.25
+gqv = 0.1
 gchi = 1.0
 ychi = 1.5
 se = 0.0
 gqa = 0.0
 # xqcut = 0  
 #run_tag = "zp_%1.0f" %(${mzp})
-run_tag = "sd_%1.0f" %(${msd})
+run_tag = "sd_%1.0f_dm_%1.0f" %(${msd},${mchi})
