--- a/scan_parameters_sd_dmdm.ini
+++ b/scan_parameters_sd_dmdm.ini
@@ -7,8 +7,12 @@ runDelphes = False
 # ncore = 7 # info not used right now
 [AuxPars]
 
+#zpMasses = $loop{[500.0, 600.0, 700.0, 800.0, 900.0, 1000.0, 1100.0, 1200.0, 1300.0, 1400.0, 1500.0, 1600.0, 1700.0, 1800.0, 1900.0, 2000.0, 2100.0, 2200.0, 2300.0, 2400.0, 2500.0, 2600.0, 2700.0, 2800.0, 2900.0, 3000.0]}
 
 sdMasses = $loop{[200, 300.0, 400, 500.0, 600.0, 700.0, 800.0, 900.0]}
+
+
+#gqs = $loop{[0.01, 0.1, 0.2, 0.25]}
 
 
 [MadGraphPars]
@@ -22,15 +26,15 @@ runcard = Cards/sd_prod/run_card.dat
 # delphescard = Cards/delphes_card_trimmed.dat # If not defined, will not run Delphes
 # pythia8card = Cards/pythia8_card_match.dat # If not defined it will not run Pythia and Delphes
 #processFolder = 2mdm_zp_prod # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
-processFolder = 2mdm_sd_chichi_prod # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
+processFolder = 2mdm_sdchichi_prod
 [MadGraphSet]
 nevents = 10000
 mchi = 65.0
+wh = 4.070000e-03
 wsd = auto 
-#msd = 140
 msd = ${AuxPars:sdMasses}
 #msd = 200.0
-mzp = 3000.0
+mzp = 2500.0
 #mzp = ${AuxPars:zpMasses}
 sa = 0.2
 gqv = 0.1
