--- a/scan_parameters_med_2mdm.ini
+++ b/scan_parameters_med_2mdm.ini
@@ -1,10 +1,10 @@
 [options]
 cleanOutput = True
 runMadGraph = True
-runPythia = False
-runDelphes = False
-# ncpu = 1 # info not used right now
-# ncore = 7 # info not used right now
+runPythia = True
+runDelphes = True
+ncpu = 1 
+ncore = 7 
 [AuxPars]
 
 zpMasses = $loop{[500.0, 600.0, 700.0, 800.0, 900.0, 1000.0, 1100.0, 1200.0, 1300.0, 1400.0, 1500.0, 1600.0, 1700.0, 1800.0, 1900.0, 2000.0, 2100.0, 2200.0, 2300.0, 2400.0, 2500.0, 2600.0, 2700.0, 2800.0, 2900.0, 3000.0]}
@@ -14,7 +14,7 @@ zpMasses = $loop{[500.0, 600.0, 700.0, 800.0, 900.0, 1000.0, 1100.0, 1200.0, 130
 
 #thetas = $loop{[0.1, 0.2, 0.25]}
 
-gqs = $loop{[0.01, 0.1, 0.2, 0.25]}
+gqs = $loop{[0.1, 0.2, 0.25, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0]}
 
 #gchis = $loop{[0.1, 0.5, 1.0, 2.0]}
 
@@ -32,7 +32,7 @@ runcard = Cards/zp_prod/run_card.dat # Path to the default run_card.dat to be us
 processFolder = 2mdm_zp_prod # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
 #processFolder = 2mdm_sd_prod
 [MadGraphSet]
-nevents = 10000
+nevents = 2000
 mchi = 65.0
 #msd = ${AuxPars:sdMasses}
 msd = 200.0
@@ -44,6 +44,6 @@ gchi = 1.0
 ychi = 1.0
 se = 0.0
 gqa = 0.0
-# xqcut = 0  
+xqcut = 0  
 run_tag = "zp_%1.0f" %(${mzp})
 #run_tag = "sd_%1.0f" %(${msd})
