--- a/scan_parameters_med_random.ini
+++ b/scan_parameters_med_random.ini
@@ -6,13 +6,13 @@ runDelphes = False
 ncpu = 1 
 ncore = 7 
 [AuxPars]
-zpMasses = $loop{[1000.0, 1100.0, 1200.0, 1300.0, 1400.0, 1500.0, 1600.0, 1700.0, 1800.0, 1900.0]}
-#mchiMasses = 
-sdMasses = $loop{numpy.random.uniform(200.0, 600.0, 100)}
-saValues = $loop{numpy.random.uniform(0.1, 1.0, 10)}
+zpMasses = $loop{numpy.random.uniform(1000.0, 4000.0, 5000)}
+mchiMasses = numpy.random.uniform(65.0, ${zpMasses}/2, 1)
+sdMasses = ${zpMasses}/2
+#saValues = $loop{numpy.random.uniform(0.1, 1.0, 1)}
 
 #gqValues = numpy.random.choice([0.1, 0.25, 0.4, 0.6, 0.8, 1.0])
-#gchiValues = numpy.random.choice([numpy.sqrt(2), 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0])
+gchiValues = numpy.random.choice([numpy.sqrt(2), 2*numpy.sqrt(2), 6.0, 8.0, 10.0])
 
 proc = $loop{['zp_prod', 'sd_prod']}
 [MadGraphPars]
@@ -25,7 +25,7 @@ runcard = Cards/zp_prod/run_card.dat # Path to the default run_card.dat to be us
 
 delphescard = Cards/delphes_card.dat # If not defined, will not run Delphes
 pythia8card = Cards/pythia8_card.dat # If not defined it will not run Pythia and Delphes
-processFolder = 2mdm_${AuxPars:proc}_scan_alpha # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
+processFolder = 2mdm_${AuxPars:proc}_random_v2 # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
 
 [MadGraphSet]
 nevents = 2000
@@ -33,11 +33,11 @@ mzp = ${AuxPars:zpMasses}
 #mzp = 2000.0
 msd = ${AuxPars:sdMasses}
 #msd = 200
-mchi = 65.0
-sa = ${AuxPars:saValues}
+mchi = ${AuxPars:sdMasses}
+sa = 0.25
 #sa = 0.25
 gqv = 0.25
-gchi = numpy.sqrt(2)
+gchi = ${AuxPars:gchiValues}
 ychi = 2.0
 se = 0.0
 gqa = 0.0
@@ -45,5 +45,5 @@ xqcut = 0
 #gqlabel = ${AuxPars:vals}[2]*10
 #xqcut = "%1.0f" %(max(30., max(2*${mchi}, ${mzp})/15.0))
 #xqcut = "%1.0f" %(max(30., max(2*${mchi}, ${msd})/15.0))
-run_tag = "zp_%1.0f_sd_%1.0f" %(${mzp},${msd})
+run_tag = "zp_%1.0f_chi_%1.0f" %(${mzp},${mchi})
 #run_tag = "sd_%1.0f_dm_%1.0f_gqv_%1.1f" %(${msd},${mchi},${gqv})
