--- a/scan_parameters_med_random.ini
+++ b/scan_parameters_med_random.ini
@@ -6,15 +6,15 @@ runDelphes = False
 ncpu = 1 
 ncore = 7 
 [AuxPars]
-zpMasses = $loop{numpy.random.uniform(1000.0, 4000.0, 5000)}
-mchiMasses = numpy.random.uniform(65.0, ${zpMasses}/2, 1)
+zpMasses = $loop{numpy.random.uniform(1000.0, 4000.0, 3000)}
+mchiMasses = numpy.random.uniform(65.0, ${zpMasses}/2, 1)[0]
 sdMasses = ${zpMasses}/2
 #saValues = $loop{numpy.random.uniform(0.1, 1.0, 1)}
 
 #gqValues = numpy.random.choice([0.1, 0.25, 0.4, 0.6, 0.8, 1.0])
-gchiValues = numpy.random.choice([numpy.sqrt(2), 2*numpy.sqrt(2), 6.0, 8.0, 10.0])
+gchiValues = numpy.random.choice([2*numpy.sqrt(2), 8.0, 10.0])
 
-proc = $loop{['zp_prod', 'sd_prod']}
+proc = $loop{['zp_prod']}
 [MadGraphPars]
 #MG5 Cards:
 proccard = Cards/${AuxPars:proc}/proc_card.dat # Optional (only used if processFolder does not exist)
@@ -33,7 +33,7 @@ mzp = ${AuxPars:zpMasses}
 #mzp = 2000.0
 msd = ${AuxPars:sdMasses}
 #msd = 200
-mchi = ${AuxPars:sdMasses}
+mchi = ${AuxPars:mchiMasses}
 sa = 0.25
 #sa = 0.25
 gqv = 0.25
