--- a/scan_parameters_med_random.ini
+++ b/scan_parameters_med_random.ini
@@ -7,15 +7,16 @@ ncpu = 1
 ncore = 7 
 [AuxPars]
 #zpMasses = $loop{[1750.0, 2000.0]}
-zpMasses = $loop{numpy.random.uniform(1000.0, 4000.0, 250)}
-chiMasses = numpy.random.uniform(65.0, ${zpMasses}/2)
+zpMasses = $loop{numpy.arange(200.0, 4025.0, 25)}
+#chiMasses = 65
 sdMasses = ${zpMasses}/2
+energy = $loop{[8000, 13000]}
 #saValues = numpy.random.uniform(0.1, 1.0)
 
 #gqValues = numpy.random.choice([0.1, 0.25, 0.4, 0.6, 0.8, 1.0])
 #gchiValues = numpy.random.choice([numpy.sqrt(2), 2*numpy.sqrt(2)])
 
-proc = $loop{['zp_prod']}
+proc = $loop{['zp_prod', 'sd_prod']}
 [MadGraphPars]
 #MG5 Cards:
 proccard = Cards/${AuxPars:proc}/proc_card.dat # Optional (only used if processFolder does not exist)
@@ -26,7 +27,7 @@ runcard = Cards/zp_prod/run_card.dat # Path to the default run_card.dat to be us
 
 delphescard = Cards/delphes_card.dat # If not defined, will not run Delphes
 pythia8card = Cards/pythia8_card.dat # If not defined it will not run Pythia and Delphes
-processFolder = 2mdm_${AuxPars:proc}_random_v3 # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
+processFolder = 2mdm_${AuxPars:proc}_${AuxPars:energy}GeV # Path to the folder to store the process generation output. If it already exists, the process generation will be #List of model parameters. Only values in this section are allowed as lists (for loops)
 
 [MadGraphSet]
 nevents = 2000
@@ -34,15 +35,17 @@ mzp = ${AuxPars:zpMasses}
 #mzp = 2000.0
 msd = ${AuxPars:sdMasses}
 #msd = 200
-mchi = ${AuxPars:chiMasses}
+mchi = 65.0
 #sa = ${AuxPars:saValues}
 sa = 0.25
 gqv = 0.25
 gchi = 1.6
-ychi = 3.0
+ychi = 1.0
 se = 0.0
 gqa = 0.0
 xqcut = 0
+ebeam1 = ${AuxPars:energy}/2
+ebeam2 = ${AuxPars:energy}/2
 #gqlabel = ${AuxPars:vals}[2]*10
 #xqcut = "%1.0f" %(max(30., max(2*${mchi}, ${mzp})/15.0))
 #xqcut = "%1.0f" %(max(30., max(2*${mchi}, ${msd})/15.0))
