--- a/scan/scan_parameters_2mdm.ini
+++ b/scan/scan_parameters_2mdm.ini
@@ -1,15 +1,15 @@
 [AuxPars]
-zpMasses = $loop{[2000.0]}
+zpMasses = $loop{[2000.0, 3000.0]}
 sdMasses = ${zpMasses}/2
 [ParamsSet]
 mchi = 65.0
 mzp = ${AuxPars:zpMasses}
 gqa = 0.25
 gqv = 0.0
-# gchi = 1.6
+gchi = 1.6
 msd = ${AuxPars:sdMasses}
 sa = 0.25
-# ychi = 1.0
+ychi = 1.0
 se = 0.0
 #filename = example.slha # Name of the SLHA file. If not given, the default is a random string
 [slhaCreator]
