--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ slha_files_extra/
 slha_files_br_copy/
 data/smodels_results/
 notebooks/SmodelS/smodels.log
-
+*.slha
 *.smodels
 notebooks/Untitled.ipynb
 data/smodels-results/results.pcl
