--- a/parameters_2mdm.ini
+++ b/parameters_2mdm.ini
@@ -5,14 +5,14 @@ doInvisible = True ;Set True if invisible compression should be performed, False
 doCompress = True ;Set True if mass compression should be performed, False elsewise
 computeStatistics = True ;Set True to compute the likelihoods L_BSM, L_SM and L_max for EM-type results.
 testCoverage = True ;Set True if topologies not covered by experiments (missing topologies) should be identified, False otherwise
-combineSRs = False ;Set True to combine signal regions when covariance matrix or pyhf JSON likelihood is available. Caution, increases runtime! False uses only best SR (faster).
+combineSRs = True ;Set True to combine signal regions when covariance matrix or pyhf JSON likelihood is available. Caution, increases runtime! False uses only best SR (faster).
 #combineAnas = ATLAS-SUSY-2019-08,ATLAS-SUSY-2019-09 ; list of statistically independent analyses to combine. Works for EM-type results only. Use with care! (Also, for the time being, it is advisable to use only if combineSRs=False)
 
 reportAllSRs = False ;Set True to report all signal regions, instead of best signal region only. 
 experimentalFeatures = False ;Set True to enable experimental features that are not yet considered part of SModelS proper. Use only if you know what you are doing!!
 
 [particles]
-model=run_332.slha ; path to the BSM model file. It can be a python module with definition of BSM particles or a SLHA file with QNUMBERS blocks. If omitted, we search in the current working directory as well as "smodels/share/models". MSSM is the default.
+model=2mdm_example.slha ; path to the BSM model file. It can be a python module with definition of BSM particles or a SLHA file with QNUMBERS blocks. If omitted, we search in the current working directory as well as "smodels/share/models". MSSM is the default.
 promptWidth = 1e-11 ; All particles with widths (in GeV) above this value are considered prompt
 stableWidth = 1e-25 ; All particles with widths (in GeV) below this value are considered stable
 erasePrompt = eCharge,colordim ; Quantum numbers to be erase for promptly decaying particles (more inclusive results, but not always valid)
@@ -26,7 +26,7 @@ ncpus = 1 ;Give number of cores used when running in parallel (integer, -1 means
 
 #Select database analyses
 [database]
-path = /home/lessa/smodels-database ; URL to the database pickle file (it will be downloaded)
+path = /home/camila/smodels-database ; URL to the database pickle file (it will be downloaded)
 #can be extended by: +fastlim (adds fastlim results), +superseded (adds superseded results), +nonaggregated (adds results with non-aggregated SRs in addition to the aggregated results), +full_llhds (replaces simplified HistFactory likelihoods by full ones). 
 # examples: path = official+nonaggregated, path = official+full_llhds
 useNonValidated = True
