--- a/scan/scan_parameters_2mdm.ini
+++ b/scan/scan_parameters_2mdm.ini
@@ -1,12 +1,13 @@
 [AuxPars]
 #massPairs = $loop{[(65.0, 500.0)]}
-zpMasses = $loop{numpy.random.uniform(260, 4000, 100000)}
+zpMasses = $loop{numpy.linspace(260, 3000, 3000)}
 sdMasses = ${zpMasses}/2
 chiMasses = numpy.random.uniform(65, ${zpMasses}/2)
-#gq_values = $loop{[0.25]}
-#gchi_values = $loop{[1.6]}
-gqValues = numpy.random.choice([0.1, 0.125, 0.15, 0.20, 0.25])
-gchiValues = numpy.random.choice([numpy.sqrt(2), 1.8, 2.5, 3.0, 4.5])
+#chiMasses = 65.
+gqValues = $loop{[0.15]}
+#gchi_values = $loop{[0.6]}
+#gqValues = numpy.random.choice([0.15, 0.14, 0.1])
+gchiValues = numpy.random.choice([1.5])
 [ParamsSet]
 mchi = ${AuxPars:chiMasses}
 mzp = ${AuxPars:zpMasses}
@@ -19,4 +20,4 @@ ychi = 4.0
 se = 0.0
 #filename = example.slha # Name of the SLHA file. If not given, the default is a random string
 [slhaCreator]
-outputFolder = './slha_files_100k/'
+outputFolder = './slha_files_monojet_add_gq_015/'
