--- a/scan/scan_parameters_2mdm.ini
+++ b/scan/scan_parameters_2mdm.ini
@@ -1,23 +1,26 @@
 [AuxPars]
 #massPairs = $loop{[(65.0, 500.0)]}
-zpMasses = $loop{numpy.linspace(260, 3000, 3000)}
+zpMasses = $loop{numpy.linspace(260, 3000, 16000)}
 sdMasses = ${zpMasses}/2
 chiMasses = numpy.random.uniform(65, ${zpMasses}/2)
 #chiMasses = 65.
-gqValues = $loop{[0.15]}
+#gqValues = $loop{[0.15]}
 #gchi_values = $loop{[0.6]}
-#gqValues = numpy.random.choice([0.15, 0.14, 0.1])
-gchiValues = numpy.random.choice([1.5])
+gqValues = numpy.random.choice([0.15, 0.25])
+gchiValues = numpy.random.choice([1.0, 1.5])
+; couplings = $loop{[(0.1, 0.6), (0.1, 0.3)]}
 [ParamsSet]
 mchi = ${AuxPars:chiMasses}
 mzp = ${AuxPars:zpMasses}
 gqa = 0.0
 gqv = ${AuxPars:gqValues}
+#gqv = ${AuxPars:couplings}[0]
 gchi = ${AuxPars:gchiValues}
+#gchi = ${AuxPars:couplings}[1]
 msd = ${AuxPars:sdMasses}
 sa = 0.25
 ychi = 4.0
 se = 0.0
 #filename = example.slha # Name of the SLHA file. If not given, the default is a random string
 [slhaCreator]
-outputFolder = './slha_files_monojet_add_gq_015/'
+outputFolder = './slha_files_monojet_couplings_comp/'
