--- a/parameters_2mdm.ini
+++ b/parameters_2mdm.ini
@@ -30,7 +30,7 @@ path = /home/camila/smodels-database ; URL to the database pickle file (it will 
 #can be extended by: +fastlim (adds fastlim results), +superseded (adds superseded results), +nonaggregated (adds results with non-aggregated SRs in addition to the aggregated results), +full_llhds (replaces simplified HistFactory likelihoods by full ones). 
 # examples: path = official+nonaggregated, path = official+full_llhds
 useNonValidated = True
-analyses = CMS-EXO-20-004 ;Set all to use all analyses included in the database
+analyses = all ;Set all to use all analyses included in the database
 #to use only specific analyses, give a list of the names separated by comma
 # analyses = CMS-PAS-SUS-13-008, CMS-SUS-13-013,ATLAS-CONF-2013-024,ATLAS-SUSY-2013-04
 # Wildcards are understood as in shell-expansion of file names: * ? [<list of letters>]
