--- a/scan/scan_parameters_2mdm.ini
+++ b/scan/scan_parameters_2mdm.ini
@@ -1,26 +1,29 @@
 [AuxPars]
 #massPairs = $loop{[(65.0, 500.0)]}
-zpMasses = $loop{numpy.linspace(260, 3000, 16000)}
-sdMasses = ${zpMasses}/2
-chiMasses = numpy.random.uniform(65, ${zpMasses}/2)
-#chiMasses = 65.
-#gqValues = $loop{[0.15]}
-#gchi_values = $loop{[0.6]}
-gqValues = numpy.random.choice([0.15, 0.25])
-gchiValues = numpy.random.choice([1.0, 1.5])
-; couplings = $loop{[(0.1, 0.6), (0.1, 0.3)]}
+; zpMasses = $loop{numpy.linspace(260, 3000, 16000)}
+zpMasses = 2000.
+sdMasses = $loop{numpy.linspace(200, 600, 3000)}
+; sdMasses = ${zpMasses}/2
+; chiMasses = numpy.random.uniform(65, ${zpMasses}/2)
+chiMasses = 65.
+gqValues = $loop{[0.25]}
+gchi_values = numpy.sqrt(2)
+sa_values = numpy.random.uniform(0., 1.0)
+; gqValues = numpy.random.choice([0.15, 0.25])
+; gchiValues = numpy.random.choice([1.0, 1.5])
+#couplings = $loop{[(0.1, 0.6), (0.1, 0.3)]}
 [ParamsSet]
 mchi = ${AuxPars:chiMasses}
 mzp = ${AuxPars:zpMasses}
 gqa = 0.0
 gqv = ${AuxPars:gqValues}
 #gqv = ${AuxPars:couplings}[0]
-gchi = ${AuxPars:gchiValues}
+gchi = ${AuxPars:gchi_values}
 #gchi = ${AuxPars:couplings}[1]
 msd = ${AuxPars:sdMasses}
-sa = 0.25
+sa = ${AuxPars:sa_values}
 ychi = 4.0
 se = 0.0
 #filename = example.slha # Name of the SLHA file. If not given, the default is a random string
 [slhaCreator]
-outputFolder = './slha_files_monojet_couplings_comp/'
+outputFolder = './slha_files_scan_alpha'
