--- a/scan/scan_parameters_2mdm.ini
+++ b/scan/scan_parameters_2mdm.ini
@@ -1,14 +1,14 @@
 [AuxPars]
 #massPairs = $loop{[(65.0, 500.0)]}
-; zpMasses = $loop{numpy.linspace(260, 3000, 16000)}
-zpMasses = 2000.
-sdMasses = $loop{numpy.linspace(200, 600, 3000)}
-; sdMasses = ${zpMasses}/2
-; chiMasses = numpy.random.uniform(65, ${zpMasses}/2)
-chiMasses = 65.
-gqValues = $loop{[0.25]}
-gchi_values = numpy.sqrt(2)
-sa_values = numpy.random.uniform(0., 1.0)
+zpMasses = $loop{numpy.linspace(260, 3000, 5000)}
+; zpMasses = 2000.
+; sdMasses = $loop{numpy.linspace(200, 600, 3000)}
+sdMasses = ${zpMasses}/2
+chiMasses = numpy.random.uniform(65, ${zpMasses}/2)
+; chiMasses = 65.
+gqValues = $loop{[0.1]}
+gchi_values = $loop{[0.6]}
+; sa_values = numpy.random.uniform(0., 1.0)
 ; gqValues = numpy.random.choice([0.15, 0.25])
 ; gchiValues = numpy.random.choice([1.0, 1.5])
 #couplings = $loop{[(0.1, 0.6), (0.1, 0.3)]}
@@ -21,9 +21,10 @@ gqv = ${AuxPars:gqValues}
 gchi = ${AuxPars:gchi_values}
 #gchi = ${AuxPars:couplings}[1]
 msd = ${AuxPars:sdMasses}
-sa = ${AuxPars:sa_values}
+; sa = ${AuxPars:sa_values}
+sa = 0.25
 ychi = 4.0
 se = 0.0
 #filename = example.slha # Name of the SLHA file. If not given, the default is a random string
 [slhaCreator]
-outputFolder = './slha_files_scan_alpha'
+outputFolder = './slha_files_NWA_updated'
