fixed BRs and model parameters for slha

--- a/scan/MG5_scan/scan_parameters_2MDM.ini
+++ b/scan/MG5_scan/scan_parameters_2MDM.ini
@@ -42,11 +42,10 @@ msd = ${AuxPars:sdMasses}
 #msd = 200
 mchi = ${AuxPars:chiMasses}
 #sa = ${AuxPars:saValues}
-sa = 0.25
-gqv = 0.25
+sina = 0.25
+gq = 0.25
 gchi = numpy.sqrt(2)
 se = 0.0
-gqa = 0.0
 xqcut = 0
 ebeam1 = ${AuxPars:energy}/2
 ebeam2 = ${AuxPars:energy}/2
