--- a/scan/scan_parameters_2mdm.ini
+++ b/scan/scan_parameters_2mdm.ini
@@ -1,30 +1,28 @@
 [AuxPars]
 #massPairs = $loop{[(65.0, 500.0)]}
-zpMasses = $loop{numpy.linspace(260, 3000, 5000)}
+zpMasses = $loop{numpy.linspace(260, 3000, 12000)}
 ; zpMasses = 2000.
 ; sdMasses = $loop{numpy.linspace(200, 600, 3000)}
 sdMasses = ${zpMasses}/2
 chiMasses = numpy.random.uniform(65, ${zpMasses}/2)
 ; chiMasses = 65.
-gqValues = $loop{[0.1]}
-gchi_values = $loop{[0.6]}
+; gqValues = $loop{[0.1]}
+; gchi_values = $loop{[0.6]}
 ; sa_values = numpy.random.uniform(0., 1.0)
 ; gqValues = numpy.random.choice([0.15, 0.25])
 ; gchiValues = numpy.random.choice([1.0, 1.5])
-#couplings = $loop{[(0.1, 0.6), (0.1, 0.3)]}
+couplings = $loop{[(0.25, numpy.sqrt(2)), (0.25, 1.0), (0.15, numpy.sqrt(2)), (0.1, 0.6)]}
 [ParamsSet]
 mchi = ${AuxPars:chiMasses}
 mzp = ${AuxPars:zpMasses}
-gqa = 0.0
-gqv = ${AuxPars:gqValues}
-#gqv = ${AuxPars:couplings}[0]
-gchi = ${AuxPars:gchi_values}
-#gchi = ${AuxPars:couplings}[1]
+; gq = ${AuxPars:gqValues}
+gq = ${AuxPars:couplings}[0]
+; gchi = ${AuxPars:gchi_values}
+gchi = ${AuxPars:couplings}[1]
 msd = ${AuxPars:sdMasses}
-; sa = ${AuxPars:sa_values}
-sa = 0.25
-ychi = 4.0
+; sina = ${AuxPars:sa_values}
+sina = 0.25
 se = 0.0
 #filename = example.slha # Name of the SLHA file. If not given, the default is a random string
 [slhaCreator]
-outputFolder = './slha_files_NWA_updated'
+outputFolder = './slha_files_scan_gq_gx_m'
