--- a/smodelsPars/parameters_2mdm.ini
+++ b/smodelsPars/parameters_2mdm.ini
@@ -5,8 +5,8 @@ doInvisible = True ;Set True if invisible compression should be performed, False
 doCompress = True ;Set True if mass compression should be performed, False elsewise
 computeStatistics = True ;Set True to compute the likelihoods L_BSM, L_SM and L_max for EM-type results.
 testCoverage = True ;Set True if topologies not covered by experiments (missing topologies) should be identified, False otherwise
-combineSRs = True ;Set True to combine signal regions when covariance matrix or pyhf JSON likelihood is available. Caution, increases runtime! False uses only best SR (faster).
-#combineAnas = ATLAS-SUSY-2019-08,ATLAS-SUSY-2019-09 ; list of statistically independent analyses to combine. Works for EM-type results only. Use with care! (Also, for the time being, it is advisable to use only if combineSRs=False)
+combineSRs = False ;Set True to combine signal regions when covariance matrix or pyhf JSON likelihood is available. Caution, increases runtime! False uses only best SR (faster).
+combineAnas = ATLAS-SUSY-2018-22-multibin,CMS-EXO-20-004 ; list of statistically independent analyses to combine. Works for EM-type results only. Use with care! (Also, for the time being, it is advisable to use only if combineSRs=False)
 
 reportAllSRs = False ;Set True to report all signal regions, instead of best signal region only. 
 experimentalFeatures = False ;Set True to enable experimental features that are not yet considered part of SModelS proper. Use only if you know what you are doing!!
