added slha files and smodels output

--- a/scan/scan_parameters_2mdm.ini
+++ b/scan/scan_parameters_2mdm.ini
@@ -5,8 +5,8 @@ zpMasses = $loop{numpy.linspace(260, 3000, 3000)}
 ; sdMasses = $loop{numpy.linspace(200, 600, 3000)}
 sdMasses = ${zpMasses}/2
 ; chiMasses = numpy.random.uniform(65, ${zpMasses}/2)
-chiMasses = 1600.
-gqValues = $loop{[0.15]}
+chiMasses = 65.
+gqValues = $loop{[0.1, 0.15]}
 gchi_values = $loop{[0.01]}
 ; sa_values = numpy.random.uniform(0.0, 0.6)
 ; gqValues = numpy.random.choice([0.15, 0.25])
@@ -25,4 +25,4 @@ sina = 0.25
 se = 0.0
 #filename = example.slha # Name of the SLHA file. If not given, the default is a random string
 [slhaCreator]
-outputFolder = './slha_files_NWA_add'
+outputFolder = './slha_files_NWA'
