Small fixes for running plotCombinedLikelihood.ipynb

--- a/scan/smodels_parameters_2mdm.ini
+++ b/scan/smodels_parameters_2mdm.ini
@@ -12,7 +12,7 @@ reportAllSRs = True ;Set True to report all signal regions, instead of best sign
 experimentalFeatures = False ;Set True to enable experimental features that are not yet considered part of SModelS proper. Use only if you know what you are doing!!
 
 [particles]
-model = 2mdm_example.slha ; path to the BSM model file. It can be a python module with definition of BSM particles or a SLHA file with QNUMBERS blocks. If omitted, we search in the current working directory as well as "smodels/share/models". MSSM is the default.
+#model = 2mdm_example.slha ; path to the BSM model file. It can be a python module with definition of BSM particles or a SLHA file with QNUMBERS blocks. If omitted, we search in the current working directory as well as "smodels/share/models". MSSM is the default.
 promptWidth = 1e-11 ; All particles with widths (in GeV) above this value are considered prompt
 stableWidth = 1e-25 ; All particles with widths (in GeV) below this value are considered stable
 erasePrompt = eCharge,colordim ; Quantum numbers to be erase for promptly decaying particles (more inclusive results, but not always valid)
